fix: form align

--- a/frontend/src/assets/input.css
+++ b/frontend/src/assets/input.css
@@ -14,3 +14,9 @@ input {
 input::content {
   margin-left: 10px;
 }
+
+@media(max-width: 1024px) {
+  input {
+    font-size: 4vw;
+  }
+}
